RESOLVED FIXED252552
[Cocoa] font-optical-sizing:auto doesn't set the opsz variation axis for all fonts that need it
https://bugs.webkit.org/show_bug.cgi?id=252552
Summary [Cocoa] font-optical-sizing:auto doesn't set the opsz variation axis for all ...
Myles C. Maxfield
Reported 2023-02-19 21:30:57 PST
[Cocoa] font-optical-sizing:auto doesn't set the opsz variation axis for all fonts that need it
Attachments
Radar WebKit Bug Importer
Comment 1 2023-02-19 21:31:13 PST
Myles C. Maxfield
Comment 2 2023-02-19 21:32:49 PST
EWS
Comment 3 2023-02-23 20:29:46 PST
Committed 260781@main (b2e8181dbd75): <https://commits.webkit.org/260781@main> Reviewed commits have been landed. Closing PR #10354 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.