Source/WebCore/platform/graphics/cocoa/UnrealizedCoreTextFont.h
@@ -69,6 +69,18 @@ public:
 private:
     CGFloat getSize() const;
 
+    enum class OpticalSizingType : uint8_t {
+        None,
+        JustVariation,
+        Everything,
+    };
+
+    static void modifyFromContext(CFMutableDictionaryRef attributes, const FontDescription&, const FontCreationContext&, ApplyTraitsVariations, float weight, float width, float slope, CGFloat size, OpticalSizingType);
+
+    using VariationsMap = HashMap<FontTag, float, FourCharacterTagHash, FourCharacterTagHashTraits>;
+    static void addAttributesForOpticalSizing(CFMutableDictionaryRef attributes, VariationsMap& variationsToBeApplied, OpticalSizingType, CGFloat size);
+    static void applyVariations(CFMutableDictionaryRef attributes, const VariationsMap& variationsToBeApplied);
+
     std::variant<RetainPtr<CTFontRef>, RetainPtr<CTFontDescriptorRef>> m_baseFont;
     RetainPtr<CFMutableDictionaryRef> m_attributes { adoptCF(CFDictionaryCreateMutable(kCFAllocatorDefault, 0, &kCFTypeDictionaryKeyCallBacks, &kCFTypeDictionaryValueCallBacks)) };
 
@@ -76,7 +88,9 @@ private:
     float m_weight { 0 };
     float m_width { 0 };
     float m_slope { 0 };
+    CGFloat m_size { 0 };
     FontStyleAxis m_fontStyleAxis { FontStyleAxis::slnt };
+    OpticalSizingType m_opticalSizingType { OpticalSizingType::None };
     FontVariationSettings m_variationSettings;
 };
 
